finished the mockinterview
